# soulful-message-router

./: .env.sample  .gitlab-ci.yml  Dockerfile  README.md  pyproject.toml  requirements.txt
src/: api.py  attachment.py  event.py  main.py  run.py  util.py  websocket_manager.py
src/db/: engine.py  queries.py
src/db/models/: chat.py  message.py  user.py
tests/: test_main.py  test_util.py
unapi/: main.py
